--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       It must look like:
       https://script.googleusercontent.com/macros/echo?user_content_key=...&lib=YOUR_DEPLOYMENT_ID
    ============================================================ */
-const API_URL = "https://script.google.com/macros/s/AKfycbxACJuNiMoJyfAyM2vWcK82n8ua66cUy_iDtke_S7bywM8ihwA1dm9twxMOEbzf-yV8jg/exec";
+const API_URL = "https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLiVXG38utgTsOYe0175zggPzf9Q2ipKRn4QiVXuZMweoSDuSGDLHa0N-ZasQsPcHQROBV3tpfTI3LHIgs3997j_lAdNd3f3IFVS6lyFUr2qb2UDe9psSN1OuF0VKzFv-uXM-I9ZlK2CLi4qzgq7ZPHHn-7F4yS2ukdmOizEjQrL2o2zqbZLXJdt9-6MC2XIewPIxVqagRmQCNGyIlCZHCEkIIbZiL7w8qm3r6CsRk7lO0ryjjzDaqyhKztuIePMJFCUsxc1Ss0y1ICPznRrB6SdBiWX4A&lib=M_tSu8beZ3qYdOBC3NodhF7yTjQUW6d6j";
 
 /* ====== Cache config (optional) ====== */
 const CACHE_KEY = "driveGallery:v1";
