--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>🐾 Auto Google Drive Gallery</title>
+<title>🐾 Pur's Faimly Gallery</title>
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.5/css/lightbox.min.css" rel="stylesheet">
 
@@ -27,7 +27,7 @@
 </head>
 <body>
 <header>
-  <h1>🐾 Auto Google Drive Gallery</h1>
+  <h1>🐾 Pur's Faimly Gallery</h1>
   <div id="status" class="msg info">Loading photos…</div>
 </header>
 
