--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>🐾 Pur's Faimly Gallery</title>
+<title>🐾 Paw's Faimly Gallery</title>
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.5/css/lightbox.min.css" rel="stylesheet">
 
@@ -27,7 +27,7 @@
 </head>
 <body>
 <header>
-  <h1>🐾 Pur's Faimly Gallery</h1>
+  <h1>🐾 Paw's Faimly Gallery</h1>
   <div id="status" class="msg info">Loading photos…</div>
 </header>
 
@@ -41,7 +41,7 @@
 <script>
 /* Your googleusercontent JSON endpoint (fetch/CORS) */
 const API_URL =
-  "https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLiVXG38utgTsOYe0175zggPzf9Q2ipKRn4QiVXuZMweoSDuSGDLHa0N-ZasQsPcHQROBV3tpfTI3LHIgs3997j_lAdNd3f3IFVS6lyFUr2qb2UDe9psSN1OuF0VKzFv-uXM-I9ZlK2CLi4qzgq7ZPHHn-7F4yS2ukdmOizEjQrL2o2zqbZLXJdt9-6MC2XIewPIxVqagRmQCNGyIlCZHCEkIIbZiL7w8qm3r6CsRk7lO0ryjjzDaqyhKztuIePMJFCUsxc1Ss0y1ICPznRrB6SdBiWX4A&lib=M_tSu8beZ3qYdOBC3NodhF7yTjQUW6d6j";
+"https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLjQ05tg3l9jtSgl99DVUK0_KzTus1vgAc-ymxFWYIBCJmtwuUnFfiuNLrhn4lEfXTUFVRluZpRsCfoM3_nvatU2vTjnjipN3c8aFwAB_MLPYdmvDua84rzpYCRP3xGf_FCi8t2LmAD_6ffpz1MigYaB0aovSLGh7DviFMuo5ImKXdwGt5pdFGf7Yod0H2qiwPT8WIkoIoYIr7BpXlFaLLt0yjeX3vQ3ImXjYe5DpKXgTK0ohf2ebhsZC9JUiA&lib=MWJNxpuRlAJ-jUGaUlPlHdTodCCOOXBtM"
 const CACHE_KEY = "driveGallery:v2";
 const CACHE_TTL = 5 * 60 * 1000; // 5 minutes
 
