--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>🐾 Paw's Faimly Gallery</title>
+<title>🐾 Pur's Faimly Gallery</title>
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.5/css/lightbox.min.css" rel="stylesheet">
 
@@ -27,7 +27,7 @@
 </head>
 <body>
 <header>
-  <h1>🐾 Paw's Faimly Gallery</h1>
+  <h1>🐾 Pur's Faimly Gallery</h1>
   <div id="status" class="msg info">Loading photos…</div>
 </header>
 
@@ -41,7 +41,8 @@
 <script>
 /* Your googleusercontent JSON endpoint (fetch/CORS) */
 const API_URL =
-"https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLjQ05tg3l9jtSgl99DVUK0_KzTus1vgAc-ymxFWYIBCJmtwuUnFfiuNLrhn4lEfXTUFVRluZpRsCfoM3_nvatU2vTjnjipN3c8aFwAB_MLPYdmvDua84rzpYCRP3xGf_FCi8t2LmAD_6ffpz1MigYaB0aovSLGh7DviFMuo5ImKXdwGt5pdFGf7Yod0H2qiwPT8WIkoIoYIr7BpXlFaLLt0yjeX3vQ3ImXjYe5DpKXgTK0ohf2ebhsZC9JUiA&lib=MWJNxpuRlAJ-jUGaUlPlHdTodCCOOXBtM"
+"https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLiRrxmarZfZEarMaQjxjfV8aFIfb3E7e9xclwld1bpfufZELEcxQCfIEQQ8N_51gFL0l6uIla95_hRGAVYqMe--fi8eJd0-ih-HONcAE8cH2TPO0vUoNo1A6RhN58EK5hMbk3A4f4LDjnc1RzV0rhBFHDfcNDdCsCcetIpkGXAjNt5Eg55JZFcuQBGnsdYlltjV2fGwxAFlry-9iAZhlvTiwhjIi9lAMwAtAUrJ60Kqhwa-8xYn_auHbYXphg&lib=M_tSu8beZ3qYdOBC3NodhF7yTjQUW6d6j";  
+
 const CACHE_KEY = "driveGallery:v2";
 const CACHE_TTL = 5 * 60 * 1000; // 5 minutes
 
